fixed codeblocks overflowing chat window

--- a/public/style.css
+++ b/public/style.css
@@ -121,7 +121,7 @@ code {
     border-radius: 5px;
     background-color: var(--black70a);
     display: inline-block;
-    max-width: calc(100% - 10px);
+    max-width: 80%;
 }
 
 #bg1 {
